# NonEuclideanEngine

./: .gitignore  CMakeLists.txt  Makefile  NonEuclideanEngine.code-workspace  README.md  run.sh
include/NonEuclideanEngine/: application.hpp  fileio.hpp  game.hpp  gameobjects.hpp  misc.hpp  player.hpp  portal.hpp  shader.hpp  texture.hpp
include/SDL2/: SDL_config.h
include/glad/: glad.h
res/NonEuclideanEngine/shaders/renderablegameobject/: renderablegameobjectfragment.glsl  renderablegameobjectvertex.glsl
res/NonEuclideanEngine/shaders/renderablegameobjectwithdepth/: renderablegameobjectwithdepthfragment.glsl
res/NonEuclideanEngine/shaders/simple/: simplefragment.glsl  simplevertex.glsl
res/NonEuclideanEngine/shaders/simpleprojection/: simpleprojectionfragment.glsl  simpleprojectionvertex.glsl
res/NonEuclideanEngine/shaders/visualportal/: visualportalfragment.glsl  visualportalvertex.glsl
src/: CMakeLists.txt  main.cpp
src/NonEuclideanEngine/: CMakeLists.txt  application.cpp  fileio.cpp  game.cpp  gameobjects.cpp  misc.cpp  player.cpp  portal.cpp  shader.cpp  texture.cpp
src/NonEuclideanEngine/glad/: glad.c
